@@ -1,5 +1,9 @@
 h1. CHANGELOG
 
+h3. 3.0.10 unreleased
+
+* add 'analytics' recipe for Segment.io and Google Analytics
+
 h3. 3.0.9 July 8, 2014
 
 * generate pages in stage two (fix for rails-signup-download recipe)
